# EMAIL-TRIAGE

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: data.py  env.py  graders.py  models.py  tasks.py  ui.py
clinical-triage-env/: Dockerfile  README.md  app.py  baseline.py  openenv.yaml  requirements.txt
clinical-triage-env/clinical_triage/: __init__.py  cases.py  env.py  graders.py  models.py
clinical-triage-env/scripts/: baseline_inference.py
clinical-triage-env/tests/: test_env.py
openenv-email-triage/: README.md  app.py  inference.py  openenv.yaml  requirements.txt
openenv-email-triage/app/: data.py  env.py  graders.py  models.py  tasks.py
openenv-email-triage/baseline/: __init__.py  run_baseline.py
server/: app.py
